# solver.sac

./: .gitignore  CMakeLists.txt  NOTICE.txt  build.ps1  local-ci-build.ps1  local-ci-build.sh  ninja-build-2021.2.0.ps1  ninja-build-2023.1.0.ps1  ninja-build-2023.2.0.ps1
.github/workflows/: build.yml  install_qt_fast_windows.ps1  install_qt_module.ps1
data/: example1.out  example2.out  example3.out  example4.out  example5.out
sdk/libs/: iriclib.lib
src/: Makefile  culout.f  sac.f  sac_cgns.f  shydie.f  shydie_cgns.f
src/SAC/: SAC.sln  SAC.vfproj
test/: CMakeLists.txt  Case1.cgn  clean.bat  consoleLog.txt  example1.out  example2.out  example3.out  example4.out  example5.out  run.bat  run.sh  run_cgns.bat  test.bat
